kubernetes/opentelemetry_k8_daemonset_agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: opentelemetry-agent
  namespace: otel-demo
  labels:
    app: opentelemetry-agent
spec:
  selector:
    matchLabels:
      app: opentelemetry-agent
  template:
    metadata:
      labels:
        app: opentelemetry-agent
    spec:
      serviceAccountName: opentelemetry-agent-sa
      containers:
      - name: opentelemetry-agent
        image: otel/opentelemetry-collector-contrib:latest
        resources:
          limits:
            memory: 1Gi
            cpu: "500m"
          requests:
            memory: 500Mi
            cpu: "250m"
        ports:
        - containerPort: 4317
        - containerPort: 55680
        - containerPort: 8888
        volumeMounts:
        - name: config-volume
          mountPath: /conf
        - name: host-filesystem
          mountPath: /host
        args: ["--config=/conf/opentelemetry-collector-config.yaml"]
      volumes:
      - name: config-volume
        configMap:
          name: opentelemetry-collector-config
      - name: host-filesystem
        hostPath:
          path: /
          type: Directory
