kubernetes/opentelemetry-flags.yaml
# Source: opentelemetry-demo/templates/component.yaml
apiVersion: v1
kind: Service
metadata:
  name: flagd
  labels:
    
    opentelemetry.io/name: flagd
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: flagd
    app.kubernetes.io/name: flagd
    app.kubernetes.io/version: "1.11.3"
    app.kubernetes.io/part-of: otel-demo
spec:
  type: ClusterIP
  ports:
    - port: 8013
      name: tcp-service
      targetPort: 8013
  selector:    
    opentelemetry.io/name: flagd
---
# Source: opentelemetry-demo/templates/component.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagd
  labels:
    
    opentelemetry.io/name: flagd
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: flagd
    app.kubernetes.io/name: flagd
    app.kubernetes.io/version: "1.11.3"
    app.kubernetes.io/part-of: otel-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      
      opentelemetry.io/name: flagd
  template:
    metadata:
      labels:
        
        opentelemetry.io/name: flagd
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: flagd
        app.kubernetes.io/name: flagd
    spec:
      serviceAccountName: opentelemetry-demo
      containers:
        - name: flagd
          image: 'ghcr.io/open-feature/flagd:latest'
          imagePullPolicy: ${IMAGE_PULL_POLICY}
          command:          
          - /flagd-build 
          - start
          - --uri
          - file:./etc/flagd/demo-flagd.json   
          - --port 
          - "8013"
          - --debug               
          ports:
          - containerPort: 8013
            name: tcp-service
          resources:
            limits:
              memory: 50Mi
          volumeMounts:
          - name: config
            mountPath: /etc/flagd            
      volumes:
        - name: config
          configMap:
            name: flagd-config
            items:
              - key: demo-flagd.json
                path: demo-flagd.json
