kubernetes/opentelemetry_observability_tools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: otel-demo  # Ensure this matches the namespace used in opentelemetry-demo.yaml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
      - name: opensearch
        image: ${OPENSEARCH_IMAGE}
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "1"
        volumeMounts:
          - mountPath: /var/lib/opensearch/data
            name: opensearch-data
        ports:
          - containerPort: ${OPENSEARCH_PORT}
      volumes:
        - name: opensearch-data
          emptyDir: {}
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: opensearch-headless
#   namespace: otel-demo  # Ensure this matches the namespace used in opentelemetry-demo.yaml
# spec:
#   clusterIP: None
#   selector:
#     app: opensearch
#   ports:
#     - protocol: TCP
#       port: ${OPENSEARCH_PORT}
#       targetPort: ${OPENSEARCH_PORT}
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: otel-demo  # Ensure this matches the namespace used in opentelemetry-demo.yaml
spec:
  selector:
    app: opensearch
  ports:
    - protocol: TCP
      port: ${OPENSEARCH_PORT}
      targetPort: ${OPENSEARCH_PORT}
---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openobserve
  namespace: otel-demo
  labels:
    app.kubernetes.io/name: openobserve
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openobserve
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openobserve
    spec:
      containers:
      - name: openobserve
        image: public.ecr.aws/zinclabs/openobserve:latest
        ports:
        - name: ui
          containerPort: 5080          
        - name: api
          containerPort: 5081
        volumeMounts:
        - name: openobserve-storage
          mountPath: /var/lib/openobserve  # Path inside the container where data will be stored
      volumes:
      - name: openobserve-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: openobserve
  namespace: otel-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openobserve
  ports:
    - protocol: TCP
      port: 5080
      targetPort: 5080
      name: ui
    - protocol: TCP
      port: 5081
      targetPort: 5081
      name: api
