kubernetes/opentelemetry-flag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: otel-demo
  name: ingress-flagd-8013
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:    
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flagd
              port:
                number: 8013
