kubernetes/opentelemetry-loadbalancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: otel-demo
  name: ingress-frontendproxy-8080
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: app.oteldemo.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontendproxy
              port:
                number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: otel-demo
  name: ingress-openobserve-5080
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: openobserve.oteldemo.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: openobserve
              port:
                number: 5080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: otel-demo
  name: ingress-opensearch-9200
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: opensearch.oteldemo.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: openobserve
              port:
                number: 5080
